Completed home page

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
             <section class="hero">
                 <div>
-                    <img src="images/personalPhoto.jpg" width="30%" />
+                    <img src="images/personalPhoto.jpg" width="75%" />
                 </div>
 
                 <div class="statement">
@@ -54,11 +54,7 @@
                         developer. Currently, I am an apprentice software
                         developer at Sky and actively engaged in the Multiverse
                         bootcamp to further refine my coding skills and broaden
-                        my knowledge. I find immense satisfaction in tackling
-                        intricate coding challenges, leveraging my strong
-                        analytical abilities. Collaboration is a strength of
-                        mine, and I prioritize continuous learning, attention to
-                        detail, and the ability to simplify complex concepts.
+                        my knowledge.
                     </p>
                 </div>
             </section>
