Added links in navbar

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
                 <h1>Olena Pelagenko</h1>
             </div>
             <div class="nav-section-2">
-                <p>Home</p>
-                <p>Bio</p>
-                <p>Experience</p>
-                <p>Portfolio</p>
+                <p><a href="home.html">Home</a></p>
+                <p><a href="bio.html">Bio</a></p>
+                <p><a href="experience.html">Experience</a></p>
+                <p><a href="portfolio.html">Portfolio</a></p>
             </div>
         </nav>
 
@@ -43,11 +43,12 @@
 
             <section class="hero">
                 <div>
-                    <img src="images/personalPhoto.jpg" width="75%" />
+                    <img src="images/personalPhoto.jpg" />
                 </div>
 
                 <div class="statement">
-                    <h1>Hi, my name is Olena!</h1>
+                    <h1 style="color: #e10903">Olena Pelagenko</h1>
+                    <h2>Software Developer</h2>
                     <p>
                         As a mathematically inclined educator, I have
                         successfully transitioned into a career as a software
