Added bio page and styling

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <h1>Olena Pelagenko</h1>
             </div>
             <div class="nav-section-2">
-                <p><a href="home.html">Home</a></p>
+                <p><a href="index.html">Home</a></p>
                 <p><a href="bio.html">Bio</a></p>
                 <p><a href="experience.html">Experience</a></p>
                 <p><a href="portfolio.html">Portfolio</a></p>
