--- a/experience.html
+++ b/experience.html
@@ -36,8 +36,6 @@
                 ></a>
             </aside>
 
-            <!-- <section class="experience-hero"> -->
-
             <section class="experience-hero">
                 <div class="grid">
                     <div>
@@ -48,10 +46,10 @@
                         />
                     </div>
                     <div>
-                        <p>
+                        <strong>
                             Taras Shevchenko National University of Kyiv, Kyiv,
                             Ukraine
-                        </p>
+                        </strong>
                         <p>Faculty of Mechanics and Mathematics</p>
                         <p>Master degree</p>
                     </div>
@@ -64,7 +62,7 @@
                         />
                     </div>
                     <div>
-                        <p>King's College London, London, UK</p>
+                      <strong>King's College London, London, UK</strong>
                         <p>
                             Postgraduate Certificate in Education (Mathematics)
                         </p>
@@ -77,10 +75,10 @@
                         />
                     </div>
                     <div>
-                        <p>
+                      <strong>
                             Kyiv National University of Technologies and Design,
                             Kyiv, Ukraine
-                        </p>
+                      </strong>
                         <p>Postgraduate studies</p>
                     </div>
 
@@ -92,7 +90,7 @@
                   />
               </div>
           <div>
-            <p>TechSwitch Retrainin Program</p>
+            <strong>TechSwitch Retrainin Program</strong>
               <p>
                 The 12-weeks course focused on Full Stack Development 
               </p>
@@ -108,7 +106,7 @@
             />
         </div>
     <div>
-      <p>EDX</p>
+      <strong>EDX</strong>
         <p>
         Skills Bootcamp in Front-End Web Development
         </p>
@@ -118,13 +116,18 @@
 
     <div>
       <img
-          src="images/sky-multiverse.jpg"
+          src="images/sky.jpg"
+          width="70"
+          style="margin: 10px"
+      />
+      <img
+          src="images/multiverse.png"
           width="70"
           style="margin: 10px"
       />
   </div>
 <div>
-<p>Sky, Multiverse</p>
+  <strong>Sky, Multiverse</strong>
   <p>
     Software Developer Apprenticeship
   </p>
