Added my projects page

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                 ></a>
             </aside>
 
+            <h1 style="color: #e10903">Software Developer</h1>
             <section class="hero">
                 <div>
                     <img src="images/personalPhoto.jpg" />
@@ -48,7 +49,6 @@
 
                 <div class="statement">
                     <h1 style="color: #e10903">Olena Pelagenko</h1>
-                    <h2>Software Developer</h2>
                     <p>
                         As a mathematically inclined educator, I have
                         successfully transitioned into a career as a software
