--- a/experience.html
+++ b/experience.html
@@ -35,6 +35,7 @@
                     ><i class="fa-brands fa-linkedin fa-2x"></i
                 ></a>
             </aside>
+            <h1 style="color: #e10903">Experience</h1>
 
             <section class="experience-hero">
                 <div class="grid">
