--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
                 </div>
             </section>
         </main>
+        <footer>
+            <p>&copy; Olena Pelagenko. All Rights Reserved.</p>
+        </footer>
 
         <script src="index.js"></script>
     </body>
