--- a/experience.html
+++ b/experience.html
@@ -137,7 +137,9 @@
 
             </section>
         </main>
-
+        <footer>
+          <p>&copy; Olena Pelagenko. All Rights Reserved.</p>
+      </footer>
         <script src="index.js"></script>
     </body>
 </html>
