--- a/portfolio.html
+++ b/portfolio.html
@@ -36,29 +36,49 @@
                 ></a>
             </aside>
             <h1 style="color: #e10903">My projects</h1>
-            <section>
-                <div class="portfolio-hero">
-                    <div class="project">
-                        <i class="fa-solid fa-rocket mx-2"></i>
-                        <h2>My Mars Mission</h2>
-                    </div>
-
-                    <div class="project">
-                        <i class="fa-solid fa-rocket mx-2"></i>
-                        <h2>My Mars Mission</h2>
-                    </div>
-
-                    <div class="project">
-                        <i class="fa-solid fa-rocket mx-2"></i>
-                        <h2>My Mars Mission</h2>
-                    </div>
-
-                    <div class="project">
-                        <i class="fa-solid fa-rocket mx-2"></i>
-                        <h2>My Mars Mission</h2>
-                    </div>
+            <div class="portfolio-hero">
+                <div class="project">
+                    <h2 style="color: #e10903">My Mars Mission</h2>
+                    <img
+                        src="images/my-mars-mission.png"
+                        alt="Mars"
+                        width="200"
+                    />
                 </div>
-            </section>
+
+                <div class="project">
+                    <h2 style="color: #e10903">Space Exploring</h2>
+                    <img
+                        src="images/space-exploring.png"
+                        alt="Rover"
+                        width="200"
+                    />
+                </div>
+
+                <div class="project">
+                    <h2 style="color: #e10903">Create A Card</h2>
+                    <img src="images/create-a-card.png" width="200" />
+                </div>
+
+                <div class="project">
+                    <h2 style="color: #e10903">Weather Dashboard</h2>
+                    <img
+                        src="images/weather-dashboard.png"
+                        alt="Umbrellas"
+                        width="200"
+                    />
+                </div>
+
+                <div class="project">
+                    <h2 style="color: #e10903">Quiz</h2>
+                    <img src="images/quiz.png" alt="Quiz" width="200" />
+                </div>
+
+                <div class="project">
+                    <h2 style="color: #e10903">Workday Scheduler</h2>
+                    <img src="images/workShedule.png" alt="Clock" width="200" />
+                </div>
+            </div>
         </main>
         <footer>
             <p>&copy; Olena Pelagenko. All Rights Reserved.</p>
