--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         developer. Currently, I am an apprentice software
                         developer at Sky and actively engaged in the Multiverse
                         bootcamp to further refine my coding skills and broaden
-                        my knowledge.
+                        my knowledge
                     </p>
                 </div>
             </section>
