--- a/portfolio.html
+++ b/portfolio.html
@@ -44,6 +44,14 @@
                         alt="Mars"
                         width="200"
                     />
+                    <div class="links">
+                        <a href="https://github.com/ljenchik/my-mars-mission"
+                            >GitHub</a
+                        >
+                        <a href="https://ljenchik.github.io/my-mars-mission"
+                            >Live</a
+                        >
+                    </div>
                 </div>
 
                 <div class="project">
@@ -53,11 +61,27 @@
                         alt="Rover"
                         width="200"
                     />
+                    <div class="links">
+                        <a href="https://github.com/ljenchik/space-exploring"
+                            >GitHub</a
+                        >
+                        <a href="https://ljenchik.github.io/space-exploring/"
+                            >Live</a
+                        >
+                    </div>
                 </div>
 
                 <div class="project">
                     <h2 style="color: #e10903">Create A Card</h2>
                     <img src="images/create-a-card.png" width="200" />
+                    <div class="links">
+                        <a href="https://github.com/Room4Renzo/Create-a-Card"
+                            >GitHub</a
+                        >
+                        <a href="https://loquacious-treacle-8f6c4c.netlify.app"
+                            >Live</a
+                        >
+                    </div>
                 </div>
 
                 <div class="project">
@@ -67,16 +91,36 @@
                         alt="Umbrellas"
                         width="200"
                     />
+                    <div class="links">
+                        <a href="https://github.com/ljenchik/weather-dashboard"
+                            >GitHub</a
+                        >
+                        <a href="https://ljenchik.github.io/weather-dashboard/"
+                            >Live</a
+                        >
+                    </div>
                 </div>
 
                 <div class="project">
                     <h2 style="color: #e10903">Quiz</h2>
                     <img src="images/quiz.png" alt="Quiz" width="200" />
+                    <div class="links">
+                        <a href="https://github.com/ljenchik/quiz">GitHub</a>
+                        <a href="https://ljenchik.github.io/quiz/v">Live</a>
+                    </div>
                 </div>
 
                 <div class="project">
                     <h2 style="color: #e10903">Workday Scheduler</h2>
                     <img src="images/workShedule.png" alt="Clock" width="200" />
+                    <div class="links">
+                        <a href="https://github.com/ljenchik/work-day-scheduler"
+                            >GitHub</a
+                        >
+                        <a href="https://ljenchik.github.io/work-day-scheduler/"
+                            >Live</a
+                        >
+                    </div>
                 </div>
             </div>
         </main>
