--- a/portfolio.html
+++ b/portfolio.html
@@ -38,12 +38,14 @@
             <h1 style="color: #e10903">My projects</h1>
             <div class="portfolio-hero">
                 <div class="project">
-                    <h2 style="color: #e10903">My Mars Mission</h2>
-                    <img
-                        src="images/my-mars-mission.png"
-                        alt="Mars"
-                        width="200"
-                    />
+                    <h3 style="color: #e10903">My Mars Mission</h3>
+                    <a href="https://ljenchik.github.io/my-mars-mission">
+                        <img
+                            src="images/my-mars-mission.png"
+                            alt="Mars"
+                            width="200"
+                        />
+                    </a>
                     <div class="links">
                         <a href="https://github.com/ljenchik/my-mars-mission"
                             >GitHub</a
@@ -55,12 +57,13 @@
                 </div>
 
                 <div class="project">
-                    <h2 style="color: #e10903">Space Exploring</h2>
-                    <img
+                    <h3 style="color: #e10903">Space Exploring</h3>
+                    <a href= https://ljenchik.github.io/space-exploring/> <img
                         src="images/space-exploring.png"
                         alt="Rover"
                         width="200"
                     />
+                </a>
                     <div class="links">
                         <a href="https://github.com/ljenchik/space-exploring"
                             >GitHub</a
@@ -72,8 +75,8 @@
                 </div>
 
                 <div class="project">
-                    <h2 style="color: #e10903">Create A Card</h2>
-                    <img src="images/create-a-card.png" width="200" />
+                    <h3 style="color: #e10903">Create A Card</h3>
+                    <a href="https://loquacious-treacle-8f6c4c.netlify.app"><img src="images/create-a-card.png" width="200" /></a>
                     <div class="links">
                         <a href="https://github.com/Room4Renzo/Create-a-Card"
                             >GitHub</a
@@ -85,12 +88,12 @@
                 </div>
 
                 <div class="project">
-                    <h2 style="color: #e10903">Weather Dashboard</h2>
-                    <img
+                    <h3 style="color: #e10903">Weather Dashboard</h3>
+                    <a href="https://ljenchik.github.io/weather-dashboard/"><img
                         src="images/weather-dashboard.png"
                         alt="Umbrellas"
                         width="200"
-                    />
+                    /></a>
                     <div class="links">
                         <a href="https://github.com/ljenchik/weather-dashboard"
                             >GitHub</a
@@ -102,17 +105,17 @@
                 </div>
 
                 <div class="project">
-                    <h2 style="color: #e10903">Quiz</h2>
-                    <img src="images/quiz.png" alt="Quiz" width="200" />
+                    <h3 style="color: #e10903">Quiz</h3>
+                   <a href="https://ljenchik.github.io/quiz"><img src="images/quiz.png" alt="Quiz" width="200" /></a>
                     <div class="links">
                         <a href="https://github.com/ljenchik/quiz">GitHub</a>
-                        <a href="https://ljenchik.github.io/quiz/v">Live</a>
+                        <a href="https://ljenchik.github.io/quiz">Live</a>
                     </div>
                 </div>
 
                 <div class="project">
-                    <h2 style="color: #e10903">Workday Scheduler</h2>
-                    <img src="images/workShedule.png" alt="Clock" width="200" />
+                    <h3 style="color: #e10903">Workday Scheduler</h3>
+                    <a href="https://ljenchik.github.io/work-day-scheduler/"><img src="images/workdaySchedule.png" alt="Clock" width="200" /></a>
                     <div class="links">
                         <a href="https://github.com/ljenchik/work-day-scheduler"
                             >GitHub</a
