--- a/portfolio.html
+++ b/portfolio.html
@@ -53,7 +53,7 @@
                         <a href="https://ljenchik.github.io/my-mars-mission"
                             >Live</a
                         >
-                    </div>
+                    </div
                 </div>
 
                 <div class="project">
