Corrected grammar mistakes

--- a/experience.html
+++ b/experience.html
@@ -91,7 +91,7 @@
                   />
               </div>
           <div>
-            <strong>TechSwitch Retrainin Program</strong>
+            <strong>TechSwitch Bootcamp</strong>
               <p>
                 The 12-weeks course focused on Full Stack Development 
               </p>
